# fish-agent-simulation-mcm2020

./: .gitignore  NASA_Analysis.Rmd  NASA_Analysis.ipynb  README.md  fetch_nasa_data.sh  fishing_condition.Rmd  fishing_location.Rmd  ocean_temperature.Rmd
analysis/: case_analysis.Rmd  distance_to_center.Rmd  fish_condition_new.Rmd  fishing_condition.Rmd  fishing_location.Rmd  moving_or_not.csv  ocean_temperature.Rmd  sensitive_analysis.Rmd
coordinate_convert/: .gitignore  main.py
log_process/: .gitignore  lap.csv  main.py  result_0.02_1.csv  result_0.02_3.csv  result_0.05_1.csv  result_2.csv  result_3.csv  result_L_0.5.csv  result_L_1.0.csv  result_N_1.0.csv  result_R_10.csv  result_R_5.csv  result_U_0.1.csv  result_U_0.5.csv  x.py
log_process/herring/: result_0.005_1.csv  result_0.005_2.csv  result_0.005_3.csv  result_0.02_1.csv  result_0.02_2.csv  result_0.02_3.csv  result_1.csv  result_2.csv  result_3.csv  result_L_0.1.csv  result_L_0.5.csv  result_L_1.0.csv  result_N_0.5.csv  result_N_1.0.csv  result_R_10.csv  result_R_5.csv  result_U_0.1.csv  result_U_0.5.csv  result_U_1.0.csv  result_new_0.005.csv  result_small.csv  (+2 more)
map-visualization/: .gitignore  README.md  package-lock.json  package.json  result.csv
png_process/: .gitignore  Cargo.toml  NASAM_AVG.psd  NASAM_AVG_ORIG.psd  result.csv
png_process/src/: data.rs  export.rs  fish.rs  main.rs  parameters.mackerel.rs  parameters.rs  predict.rs  render.rs  score.rs  utils.rs
png_process/src/parameters/: fast_predict.rs  full_predict.rs  parameters_herring.rs  parameters_mackerel.rs  parameters_mackerel_fast.rs
(+21 files in other folders)
