[package]
name = "png_process"
version = "0.1.0"
authors = ["Alex Chi <iskyzh@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.23"
rand = { version = "0.7.3", features = ["small_rng"] }
rand_distr = "0.2.2"
